k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args: 
            - |
              sed -i "s|__VALOR_DE_LA_IP_DEL_GATEWAY__|${K8S_API_GATEWAY}|g" /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
          
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
