k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  type: ClusterIP

  selector:
    app: frontend-service

  ports:
    - port: 80
      targetPort: 80
